# Vina-Qnlm

./: README.md
src/: CMakeLists.txt
src/lib/: LigandList.cpp  LigandList.h  array3d.h  atom_constants.h  atom_slave.h  bfgs.h  bfgs_slave.c  bfgs_slave.h  cache.h  cachegrid.c  cachegrid.h  common_slave.c  common_slave.h  current_weights.cpp  everything.cpp  grid.h  model.cpp  model.h  model_slave.c  model_slave.h  monte_carlo.cpp  monte_carlo.h  monte_carlo_slave.h  mutate_slave.c  mutate_slave.h  parallel_mc.cpp  parallel_mc.h  parallel_ori.h  parse_pdbqt.cpp  parse_pdbqt.h  pdb.cpp  precalculate.h  quaternion_slave.c  quaternion_slave.h  randomgen.c  randomgen.h  terms.cpp  terms.h  tranModel.h  tree.h  (+3 more)
src/main/: main.cpp
src/split/: split.cpp
