cmake_minimum_required(VERSION 3.3)
project(src)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    lib/array3d.h
    lib/atom.h
    lib/atom_base.h
    lib/atom_constants.h
    lib/atom_type.h
    lib/bfgs.h
    lib/brick.h
    lib/cache.cpp
    lib/cache.h
    lib/common.h
    lib/conf.h
    lib/convert_substring.h
    lib/coords.cpp
    lib/coords.h
    lib/curl.h
    lib/current_weights.cpp
    lib/current_weights.h
    lib/everything.cpp
    lib/everything.h
    lib/file.h
    lib/grid.cpp
    lib/grid.h
    lib/grid_dim.h
    lib/igrid.h
    lib/incrementable.h
    lib/int_pow.h
    lib/macros.h
    lib/manifold.cpp
    lib/manifold.h
    lib/matrix.h
    lib/model.cpp
    lib/model.h
    lib/monte_carlo.cpp
    lib/monte_carlo.h
    lib/mutate.cpp
    lib/mutate.h
    lib/my_pid.cpp
    lib/my_pid.h
    lib/naive_non_cache.cpp
    lib/naive_non_cache.h
    lib/non_cache.cpp
    lib/non_cache.h
    lib/parallel.h
    lib/parallel_mc.cpp
    lib/parallel_mc.h
    lib/parallel_progress.cpp
    lib/parallel_progress.h
    lib/parse_error.h
    lib/parse_pdbqt.cpp
    lib/parse_pdbqt.h
    lib/pdb.cpp
    lib/pdb.h
    lib/precalculate.h
    lib/quasi_newton.cpp
    lib/quasi_newton.h
    lib/quaternion.cpp
    lib/quaternion.h
    lib/random.cpp
    lib/random.h
    lib/recent_history.h
    lib/scoring_function.h
    lib/ssd.cpp
    lib/ssd.h
    lib/statistics.h
    lib/szv_grid.cpp
    lib/szv_grid.h
    lib/tee.h
    lib/terms.cpp
    lib/terms.h
    lib/tree.h
    lib/triangular_matrix_index.h
    lib/weighted_terms.cpp
    lib/weighted_terms.h
    main/main.cpp
    split/split.cpp)

add_executable(src ${SOURCE_FILES})